@@ -1,0 +1,69 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+  <head>
+    <title>
+      GM4SLV DSC Logs 
+    </title>
+<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+  </head>
+  <body bgcolor="#A9D7C2">
+
+	  <h2> A quick and dirty guide to uploading from DSCDecoder</h2>
+	<ul>
+		<li>Turn Decoding OFF (square "stop" button")</li>
+		  <li>Set up the UPD Output</li>
+	  <li>Options ... Output ... UDP/IP Output ... Setup </li>
+		  <li>Choose your preferred RXID (fewer than 18 characters)</li>
+	  <br>
+	  <br>
+	  <img src="./dsc2.png">
+	  <br>
+	  <br><br>
+	  <table>
+		  <tr><td>
+				  <b> Destination IP Address</b></td><td> www.yaddnet.org</td></tr>
+		  <tr><td>
+				  <b>Destination Port</b></td><td>4530</td></tr>
+		  <tr><td>
+				  <b>Source Identification</b></td><td> RXID Freq</td></tr>
+				  
+		  <tr><td>
+				  <b>Source Port</b></td><td>4531 (not important)</td></tr>
+	  </table>
+	  <br><br>
+	<img src="./dscd.png">
+	<br>
+	<br>
+	<br>
+	  <ul>
+		  <li>Enable UDP Output</li>
+	  <li>Options ... Output ... UDP/IP Output ... Enable=tick </li>
+		  </li>
+		  <li>Turn decoding back on (round Green button)</li>
+	  </ul>
+	  <br>
+	  <br>
+		  <b>THE FREQUENCY MUST BE IN kHz with the appropriate DECIMAL place</b> <br>
+		  Don't forget to add the <b><i>"dot zero"</i></b> where appropriate!<br><br>
+	  <ul>	 
+	  	  <li>2177.0</li>
+		  <li>2187.5</li>
+		  <li>4207.5</li>
+		  <li>6312.0</li>
+		  <li>8414.5</li>
+		  <li>12577.0</li>
+		  <li>16804.5</li>
+		  <li>156525.0</li>
+	  </ul>
+	  <br>
+	  <br>
+	  Once you are decoding new signals you should see them in the appropriate pages on YaDDNet,<br>
+	  and also see each incoming packet listed on the <a href="http://www.yaddnet.org/pages/php/logger_messages.php?svr_type=dUDP">DSC Decoder Input Log</a>
+	<br><br>
+	<center>
+	<a href="../index.php">HOME</a>
+	<br><br>
+</center>
+  </body>
+</html>
+
